[gd_scene load_steps=10 format=3 uid="uid://ddod78ylbup4"]

[ext_resource type="Script" uid="uid://blmopwogolsc2" path="res://scripts/audio.gd" id="1_dl6it"]
[ext_resource type="AudioStream" uid="uid://c8npykcqctv0s" path="res://textures_and_audios/Eat1.wav" id="2_8kkbo"]
[ext_resource type="AudioStream" uid="uid://cq08mpwfi3c4i" path="res://textures_and_audios/Eat2.wav" id="3_3g2y6"]
[ext_resource type="AudioStream" uid="uid://cis6iur1bu2tm" path="res://textures_and_audios/Eat3.wav" id="4_lpqkh"]
[ext_resource type="AudioStream" uid="uid://gtr71jtmyfvq" path="res://textures_and_audios/Death.wav" id="5_lymfh"]
[ext_resource type="AudioStream" uid="uid://olbn2hgdrshx" path="res://textures_and_audios/Select.wav" id="6_p5uep"]
[ext_resource type="AudioStream" uid="uid://md0uwpuxwev4" path="res://textures_and_audios/asteroid_start.ogg" id="7_3g2y6"]
[ext_resource type="AudioStream" uid="uid://ddn1jyi0jn6y7" path="res://textures_and_audios/asteroid_idle.ogg" id="7_lpqkh"]
[ext_resource type="AudioStream" uid="uid://du0fj0q1gnrkk" path="res://textures_and_audios/asteroid_loop.ogg" id="8_lpqkh"]

[node name="Audio" type="Node"]
process_mode = 3
script = ExtResource("1_dl6it")

[node name="Eat1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_8kkbo")

[node name="Eat2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3g2y6")

[node name="Eat3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lpqkh")

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_lymfh")

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_p5uep")

[node name="Asteroid_Idle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_lpqkh")
volume_db = -7.0

[node name="Asteroid_Start" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_3g2y6")
volume_db = -7.0

[node name="Asteroid_Loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_lpqkh")
volume_db = -7.0
